# not_in_the_bible

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.yaml.example
example/: README.md  bible_en.txt  bible_fr.txt  config.yaml  ignored_en.txt
examples/: README.md  ignored_fr.txt
locales/en/: main.ftl
locales/fr/: main.ftl
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2022-01-28-182648_quoted_tweets/: down.sql  up.sql
src/: config.rs  db_conf.rs  db_request_queue.rs  db_response_queue.rs  dictionary.rs  history.rs  in_memory_dictionary.rs  job_queue.rs  lib.rs  log_expect.rs  main.rs  request.rs  request_queue.rs  response.rs  response_queue.rs  schema.rs  searcher.rs  tokenize.rs  tweet.rs
src/twitter/: connection.rs  listener.rs  mod.rs  responder.rs  tweet.rs  twitter_conf.rs
