[package]
name = "not_in_the_bible"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
lazy_static = "1.4"
rustop = "1.1"
unidecode = "0.3"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.4", features = ["postgres", "chrono"] }
yaml-rust = "0.4"
oauth-client = "0.6"
serde_qs = "0.8"
serde_json = "1.0"
fluent-templates = "0.6"
diesel_migrations = "1.4"
